MSND-24 prep poms for indie release. For the moment purepom <parent> 2.6.0 is used due to springframework build issues (MSND-23).
git-svn-id: https://source.sakaiproject.org/svn/mailsender/mailsender/trunk@98300 66ffb92e-73f9-0310-93c1-f5514f145a0a