@@ -1,59 +1,130 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!--
-	Copyright (c) 2008 The Sakai Foundation.
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+    <modelVersion>4.0.0</modelVersion>
+    <parent>
+        <groupId>org.sakaiproject.purepoms</groupId>
+        <artifactId>sakai-standard-tool</artifactId>
+        <version>2.6.0</version>
+        <!-- <version>2.8-SNAPSHOT</version> -->
+        <!-- for 2.7 -->
+        <!-- <version>2.7.8</version> -->
+        <!-- for 2.6 -->
+        <!-- <version>2.6.0</version> -->
+    </parent>
 
-	Licensed under the Educational Community License, Version 1.0 (the "License");
-	you may not use this file except in compliance with the License.
-	You may obtain a copy of the License at
+    <groupId>org.sakaiproject.mailsender</groupId>
+    <artifactId>mailsender-base</artifactId>
+    <name>Sakai Mail Sender Project</name>
+    <version>1.6-SNAPSHOT</version>
+    <description>Mail Sender base pom.</description>
+    <organization>
+        <name>Sakai Project</name>
+        <url>http://sakaiproject.org/</url>
+    </organization>
+    <inceptionYear>2007</inceptionYear>
+    <packaging>pom</packaging>
 
-	http://www.opensource.org/licenses/ecl2.php
+    <properties>
+        <sakairsf.sakai.version>2.2.x</sakairsf.sakai.version>
+        <rsfutil.version>0.7.4</rsfutil.version>
+        <url.localsite>scp://source.sakaiproject.org/var/www/html/release/mailsender/${project.version}</url.localsite>
+    </properties>
 
-	Unless required by applicable law or agreed to in writing, software
-	distributed under the License is distributed on an "AS IS" BASIS,
-	WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-	See the License for the specific language governing permissions and
-	limitations under the License.
--->
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-	<modelVersion>4.0.0</modelVersion>
-	<parent>
-		<!-- for 2.7 builds -->
-		<!--
-		<groupId>org.sakaiproject.purepoms</groupId>
-		<artifactId>sakai-standard-tool</artifactId>
-		<version>2.7.7</version>
-		-->
+    <modules>
+        <module>api</module>
+        <module>assembly</module>
+        <module>help</module>
+        <module>impl</module>
+        <module>pack</module>
+        <module>tool</module>
+    </modules>
+    
+    <developers>
+        <developer>
+            <id>thecarlhall</id>
+            <name>Carl Hall</name>
+            <organization>Hallway Technologies</organization>
+            <roles>
+                <role>architect</role>
+                <role>developer</role>
+            </roles>
+            <timezone>-5</timezone>
+        </developer>
+        <developer>
+            <id>slt</id>
+            <name>Seth Theriault</name>
+            <organization>Columbia University</organization>
+            <roles>
+                <role>developer</role>
+            </roles>
+            <timezone>-5</timezone>
+        </developer>
+        <developer>
+            <id>arwhyte</id>
+            <name>Anthony Whyte</name>
+            <organization>Sakai Foundation / University of Michigan</organization>
+            <roles>
+                <role>pom plumber</role>
+            </roles>
+            <timezone>-5</timezone>
+        </developer>
+    </developers>
 
-		<!-- for 2.6 builds -->
-		<groupId>org.sakaiproject.purepoms</groupId>
-		<artifactId>sakai-standard-tool</artifactId>
-		<version>2.6.0</version>
-	</parent>
-	<groupId>org.sakaiproject.mailsender</groupId>
-	<artifactId>mailsender-base</artifactId>
-	<name>Sakai Mail Sender Project</name>
-	<version>1.6-SNAPSHOT</version>
-	<scm>
-		<connection>scm:svn:https://source.sakaiproject.org/contrib/gatech/mailsender</connection>
-		<developerConnection>scm:svn:https://source.sakaiproject.org/contrib/gatech/mailsender</developerConnection>
-		<url>https://source.sakaiproject.org/contrib/gatech/mailsender</url>
-	</scm>
-	<packaging>pom</packaging>
-	<properties>
-		<sakairsf.sakai.version>2.2.x</sakairsf.sakai.version>
-		<rsfutil.version>0.7.4</rsfutil.version>
-	</properties>
-	<modules>
-		<module>help</module>
-		<module>api</module>
-		<module>impl</module>
-		<module>tool</module>
-		<module>pack</module>
-		<module>assembly</module>
-	</modules>
-	<repositories>
+    <scm>
+        <connection>scm:svn:https://source.sakaiproject.org/contrib/mailsender</connection>
+        <developerConnection>scm:svn:https://source.sakaiproject.org/contrib/mailsender</developerConnection>
+        <url>https://source.sakaiproject.org/contrib/mailsender</url>
+    </scm>
+
+    <distributionManagement>
+        <downloadUrl>http://source.sakaiproject.org/maven2/</downloadUrl>
+        <snapshotRepository>
+            <uniqueVersion>false</uniqueVersion>
+            <id>sakai-maven-snapshots-scp</id>
+            <name>Sakai snapshot Repo</name>
+            <url>scp://source.sakaiproject.org/var/www/html/maven2-snapshots</url>
+            <layout>default</layout>
+        </snapshotRepository>
+        <repository>
+            <uniqueVersion>false</uniqueVersion>
+            <id>sakai-maven2-scp</id>
+            <name>Sakai maven2 repository</name>
+            <url>scp://source.sakaiproject.org/var/www/html/maven2</url>
+            <layout>default</layout>
+        </repository>
+        <site>
+            <id>sakai-site</id>
+            <name>Sakai release Site</name>
+            <url>${url.localsite}</url>
+        </site>
+    </distributionManagement>
+
+    <pluginRepositories>
+        <pluginRepository>
+            <id>Sakai Plugin Repo</id>
+            <url>http://source.sakaiproject.org/maven2</url>
+            <releases>
+                <enabled>true</enabled>
+            </releases>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+        </pluginRepository>
+        <pluginRepository>
+            <id>maven2-central-repo</id>
+            <name>Maven2 Central Repo</name>
+            <url>http://repo1.maven.org/maven2/</url>
+            <releases>
+                <enabled>true</enabled>
+            </releases>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+        </pluginRepository>
+    </pluginRepositories>
+
+    <repositories>
         <repository>
             <id>sakai-maven</id>
             <name>Sakai Maven Repo</name>
@@ -66,84 +137,130 @@
                 <enabled>false</enabled>
             </snapshots>
         </repository>
-	</repositories>
+        <repository>
+            <id>sakai-maven2-snapshots</id>
+            <name>Sakai Maven Repo</name>
+            <layout>default</layout>
+            <url>http://source.sakaiproject.org/maven2-snapshots</url>
+            <releases>
+                <enabled>false</enabled>
+            </releases>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
+        </repository>
+        <repository>
+            <id>default</id>
+            <name>Maven Repository Switchboard</name>
+            <layout>default</layout>
+            <url>http://repo1.maven.org/maven2</url>
+            <releases>
+                <enabled>true</enabled>
+            </releases>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+        </repository>
+    </repositories>
 
-	<dependencyManagement>
-		<dependencies>
-			<dependency>
-				<groupId>org.sakaiproject</groupId>
-				<artifactId>sakai-mailarchive-api</artifactId>
-				<version>(2.6.0,2.8.0]</version>
-				<scope>provided</scope>
-			</dependency>
-			<dependency>
-				<groupId>org.sakaiproject</groupId>
-				<artifactId>sakai-message-api</artifactId>
-				<version>(2.6.0,2.8.0]</version>
-				<scope>provided</scope>
-			</dependency>
-			<dependency>
-				<groupId>commons-logging</groupId>
-				<artifactId>commons-logging</artifactId>
-				<version>1.1</version>
-				<scope>provided</scope>
-			</dependency>
-			<dependency>
-				<groupId>org.sakaiproject.mailsender</groupId>
-				<artifactId>mailsender-api</artifactId>
-				<version>${project.version}</version>
-				<scope>provided</scope>
-			</dependency>
-			<dependency>
-				<groupId>org.sakaiproject.mailsender</groupId>
-				<artifactId>mailsender-impl</artifactId>
-				<version>${project.version}</version>
-			</dependency>
-			<!-- sakai-util -->
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>org.sakaiproject</groupId>
+                <artifactId>sakai-mailarchive-api</artifactId>
+                <!-- <version>2.8-SNAPSHOT</version> -->
+                <!-- <version>(2.6.0,2.8.0]</version> -->
+                <version>(2.6.0,2.7.0]</version>
+                <scope>provided</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.sakaiproject</groupId>
+                <artifactId>sakai-message-api</artifactId>
+                <!-- <version>2.8-SNAPSHOT</version> -->
+                <!-- <version>(2.6.0,2.8.0]</version> -->
+                <version>(2.6.0,2.7.0]</version>
+                <scope>provided</scope>
+            </dependency>
+            <dependency>
+                <groupId>commons-logging</groupId>
+                <artifactId>commons-logging</artifactId>
+                <version>1.1.1</version>
+                <scope>provided</scope>
+            </dependency>
+            <dependency>
+                <groupId>${project.groupId}</groupId>
+                <artifactId>mailsender-api</artifactId>
+                <version>${project.version}</version>
+                <scope>provided</scope>
+            </dependency>
+            <dependency>
+                <groupId>${project.groupId}</groupId>
+                <artifactId>mailsender-impl</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>javax.activation</groupId>
+                <artifactId>activation</artifactId>
+                <version>1.0.2</version>
+                <scope>provided</scope>
+            </dependency>
+            <dependency>
+                <groupId>javax.mail</groupId>
+                <artifactId>mail</artifactId>
+                <version>1.4.3</version>
+                <scope>provided</scope>
+            </dependency>
+            <dependency>
+                <groupId>uk.org.ponder.sakairsf</groupId>
+                <artifactId>sakairsf</artifactId>
+                <version>${rsfutil.version}-sakai_${sakairsf.sakai.version}</version>
+                <type>jar</type>
+            </dependency>
+            <dependency>
+                <groupId>uk.org.ponder.sakairsf</groupId>
+                <artifactId>SakaiRSFComponents-evolvers</artifactId>
+                <version>${rsfutil.version}-sakai_${sakairsf.sakai.version}</version>
+                <type>jar</type>
+            </dependency>
+            <dependency>
+                <groupId>uk.org.ponder.sakairsf</groupId>
+                <artifactId>SakaiRSFComponents-templates</artifactId>
+                <version>${rsfutil.version}-sakai_${sakairsf.sakai.version}</version>
+                <type>war</type>
+            </dependency>
+            <dependency>
+                <groupId>uk.org.ponder.rsfutil</groupId>
+                <artifactId>RSFComponents-templates</artifactId>
+                <version>${rsfutil.version}</version>
+                <type>war</type>
+            </dependency>
+            <dependency>
+                <groupId>org.mockito</groupId>
+                <artifactId>mockito-core</artifactId>
+                <version>1.8.5</version>
+                <scope>test</scope>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
 
-			<dependency>
-				<groupId>javax.activation</groupId>
-				<artifactId>activation</artifactId>
-				<version>1.0.2</version>
-				<scope>provided</scope>
-			</dependency>
-			<dependency>
-				<groupId>javax.mail</groupId>
-				<artifactId>mail</artifactId>
-				<version>1.4.3</version>
-				<scope>provided</scope>
-			</dependency>
-
-			<dependency>
-				<groupId>uk.org.ponder.sakairsf</groupId>
-				<artifactId>sakairsf</artifactId>
-				<version>${rsfutil.version}-sakai_${sakairsf.sakai.version}</version>
-				<type>jar</type>
-			</dependency>
-			<dependency>
-				<groupId>uk.org.ponder.sakairsf</groupId>
-				<artifactId>SakaiRSFComponents-evolvers</artifactId>
-				<version>${rsfutil.version}-sakai_${sakairsf.sakai.version}</version>
-				<type>jar</type>
-			</dependency>
-			<dependency>
-				<groupId>uk.org.ponder.sakairsf</groupId>
-				<artifactId>SakaiRSFComponents-templates</artifactId>
-				<version>${rsfutil.version}-sakai_${sakairsf.sakai.version}</version>
-				<type>war</type>
-			</dependency>
-			<dependency>
-				<groupId>uk.org.ponder.rsfutil</groupId>
-				<artifactId>RSFComponents-templates</artifactId>
-				<version>${rsfutil.version}</version>
-				<type>war</type>
-			</dependency>
-			<dependency>
-				<groupId>org.mockito</groupId>
-				<artifactId>mockito-core</artifactId>
-				<version>1.8.5</version>
-				<scope>test</scope>
-			</dependency>
-		</dependencies>
-	</dependencyManagement>
+    <reporting>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-javadoc-plugin</artifactId>
+                <version>2.6.1</version>
+                <configuration>
+                    <debug>true</debug>
+                    <links>
+                        <link>http://java.sun.com/j2se/1.5.0/docs/api/</link>
+                    </links>
+                    <breakiterator>true</breakiterator>
+                    <verbose>false</verbose>
+                    <aggregate>true</aggregate>
+                    <maxmemory>512m</maxmemory>
+                    <additionalJOption>-J-Xms168m -J-Xmx512m -J-XX:PermSize=128m -J-XX:NewSize=64m</additionalJOption>
+                </configuration>
+            </plugin>
+        </plugins>
+    </reporting>
 </project>
